--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.5.0",
     "moment": "^2.29.4",
     "next": "13.1.2",
     "react": "18.2.0",
